src/objects/pse__Project_Planner_Preferences__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>User preferences that determine the look and feel of the project planner.</description>
    <fields>
        <fullName>pse__Display_Decimal_Precision_Cutoff__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Maximum (non-inclusive) number of hours to render fractional precision in Planner.</description>
        <inlineHelpText>Maximum (non-inclusive) number of hours to render fractional precision in Planner.</inlineHelpText>
        <label>Display Decimal Precision Cutoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hide_Inline_Dialog__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting determines whether or not to hide the edit mode settings dialog.</inlineHelpText>
        <label>Hide Inline Edit Dialog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Inline_Edit_Mode_THHC__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This setting determines how inline editing of assignments affects total assignment hours and end date.</inlineHelpText>
        <label>Hold total assignment hours constant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Zoom_Level__c</fullName>
        <defaultValue>&quot;week&quot;</defaultValue>
        <inlineHelpText>The default timeline zoom level. Enter a value of quarter, month, week or day.</inlineHelpText>
        <label>Zoom Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Planners Preferences - Project</label>
</CustomObject>